--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "dmstr/yii2-adminlte-asset": "2.6.2",
         "cboden/ratchet": "v0.4.1",
         "mohorev/yii2-upload-behavior": "0.2.1",
-        "yiisoft/yii2-imagine": "2.2.0"
+        "yiisoft/yii2-imagine": "2.2.0",
+        "la-haute-societe/yii2-save-relations-behavior": "1.7.2",
+        "unclead/yii2-multiple-input": "2.21.5"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
